--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Build and Push
     branches:
       - main
 jobs:
-  build_and_deploy:
+  build_and_publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -17,5 +17,5 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Push
+      - name: Publish
         run: ci/publish
