--- a/packaging/Dockerfile
+++ b/packaging/Dockerfile
@@ -1,4 +1,8 @@
 FROM alpine:3
+
+LABEL org.opencontainers.image.source = "https://github.com/yogendra/k8s-shell"
+LABEL org.opencontainers.image.authors="yogendrarampuria@gmail.com"
+
 ADD src/* /
 ADD packaging/entrypoint /entrypoint
 
