Move file to /config instead of root

--- a/packaging/Dockerfile
+++ b/packaging/Dockerfile
@@ -3,8 +3,9 @@ FROM alpine:3
 LABEL org.opencontainers.image.source = "https://github.com/yogendra/k8s-shell"
 LABEL org.opencontainers.image.authors="yogendrarampuria@gmail.com"
 
-ADD src/* /
+RUN mkdir -p /config
+ADD src/* /config
 ADD packaging/entrypoint /entrypoint
 
 USER nobody
-CMD /entrypoint
+ENTRYPOINT ["/entrypoint"]
